# ner-api

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yaml
ner_api/: main.py  predict.py  schemas.py  serializers.py  settings.py  streamlit.py
ner_api/tests/: test_main.py
