[tool.poetry]
name = "ner-api"
version = "0.1.0"
description = ""
authors = ["Luc Cary <luc.cary@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
spacy = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
