[tool.poetry]
name = "ner-api"
version = "0.1.0"
description = ""
authors = ["Luc Cary <luc.cary@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = ">=0.61.1,<0.62.0"
spacy = "^3.0.5"
pydantic = ">=1.0.0,<2.0.0"
uvicorn = ">=0.11.6,<0.12.0"
streamlit = "^0.79.0"
spacy-streamlit = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pre-commit = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
